syntax = "proto3";

option java_package = "com.github.nacabaro.vbhelper.source.proto";
option java_multiple_files = true;

message Secrets {
  string aes_key = 1;
  repeated int32 vb_cipher = 2;
  repeated int32 be_cipher = 3;

  message HmacKeys {
    string hmac_key_1 = 1;
    string hmac_key_2 = 2;
  }
  HmacKeys vbdm_hmac_keys = 4;
  HmacKeys vbc_hmac_keys = 5;
  HmacKeys be_hmac_keys = 6;

}